<resources>
    <string name="app_name">Actitracker</string>
    <string name="next">Next</string>

    <!--UsernameActivity-->
    <string name="invalid_username">Please enter a valid name.</string>

    <!--TaskSelectionActivity-->
    <string name="task_start">Start Activity</string>
    <string name="add_task">Add Activity</string>
    <string-array name="default_tasks">
        <item>Stand</item>
        <item>Walk</item>
        <item>Jog</item>
    </string-array>

    <!--SensorLogActivity-->
    <string name="timed_mode">Timed</string>
    <string name="manual_mode">Manual</string>
    <string name="log_start">Start</string>
    <string name="log_stop">Stop</string>
    <string name="log_time_hint">Enter time in minutes to sample.</string>
    <string name="invalid_time">Please enter a valid time.</string>
    <string name="file_size">File Size:\u0020</string>
    <string name="file_list_button">Show Files</string>
    <string name="log_timer_end">00:00</string>

    <!--SettingsActivity-->
    <string name="sensor_list_phone">Phone Sensor List</string>
    <string name="sensor_list_wear">Watch Sensor List</string>

    <!--preferences.xml-->
    <string name="pref_samplingRate">Sampling Rate</string>
    <string-array name="pref_samplingRate_entries">
        <item>10Hz</item>
        <item>20Hz</item>
        <item>25Hz</item>
        <item>40Hz</item>
        <item>50Hz</item>
    </string-array>
    <string-array name="pref_samplingRate_values">
        <item>100000</item>
        <item>50000</item>
        <item>40000</item>
        <item>25000</item>
        <item>20000</item>
    </string-array>
    <string name="pref_samplingRate_default">50000</string>

    <string name="pref_dateTimeFormat">File Name Date &amp; Time Format</string>
    <string-array name="pref_dateTimeFormat_values">
        <item>yyyyMMdd_HHmm</item>
        <item>yyyyMMdd_HHmmss</item>
        <item>MMdd_HHmm</item>
        <item>MMdd_HHmmss</item>
        <item>HHmm</item>
        <item>HHmmss</item>
    </string-array>
    <string name="pref_dateTimeFormat_default">yyyyMMdd_HHmm</string>

    <!--settings_menu.xml-->
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
</resources>
