<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wisdm.cis.fordham.edu.actitracker.SensorLogActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_timed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timed_mode"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_mode"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/log_time_minutes"
        android:hint="@string/log_time_hint"
        android:layout_margin="15sp"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/log_start_button"
        android:text="@string/log_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/log_stop_button"
        android:text="@string/log_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <ListView
        android:id="@+id/file_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
